# cpp_contest_template

./: CMakeLists.txt  README.md  test.py
include/basic/: array_of_difference.hpp  binary_search.hpp  prefix_sum.hpp
include/common/: compare.hpp  single_max_min_function.hpp
include/mathematic/: fast_power.hpp
src/basic/: CMakeLists.txt  array_of_difference.cpp  binary_search.cpp  prefix_sum.cpp
src/common/: CMakeLists.txt  compare.cpp  single_max_min_function.cpp
src/mathematic/: CMakeLists.txt  fast_power.cpp
test/basic/: CMakeLists.txt  test_array_of_difference.cpp  test_binary_search.cpp  test_prefix_sum.cpp
test/mathematic/: CMakeLists.txt  test_fast_power.cpp
